fix: alignment with search bar

--- a/src/styles/archive/search.module.css
+++ b/src/styles/archive/search.module.css
@@ -3,12 +3,12 @@
     max-width: 600px;
     width: 100%;
     /* margin-left: auto; */
-    padding: var(--space-sm);
+    padding: var(--space-sm) 0;
   }
   
   .searchIcon {
     position: absolute;
-    left: 1.2rem;
+    left: 0.7rem;
     top: 50%;
     transform: translateY(-50%);
     color: var(--brand-grey);
